--- a/index.html
+++ b/index.html
@@ -11,39 +11,126 @@
 <body>
     <header>
         <nav id="nav-bar-volants">
-
-            <h1>Morgane<br />Barthélémy</h1>
-            <div style="width: 20%;"></div>
-            <div id="right-container">
-                <h2>Compétences</h2>
-                <h2>Projets</h2>
-                <h2>Contact</h2>
+            <div id="container-central">
+                <h1><a href="index.html">Morgane</a></h1>
+                <div style="width: 30%;"></div>
+                <div id="right-container-header-nav-bar">
+                    <!-- <a href="#"><h2>À propos</h2></a> -->
+                    <h2><a href="#mes-competences">Compétences</a></h2>
+                    <h2><a href="#mes-projets">Projets</a></h2>
+                    <h2><a href="#contact">Contact</a></h2>
+                </div>
             </div>
         </nav>
 
         <div id="container-central">
+            <!-- <h3>À propos :</h3> -->
             <section id="presentation-container">
                 <img id="photo-de-profil" src="assets/img/photodeprofilmimi.jpg" alt="photo de profil">
                 <div id="bulle-de-presentation">
                     <div id="bulle-prenom">
                         <p>Morgane</p>
                     </div>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet. </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet. </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet. </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet. </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet. </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Lorem ipsum dolor sit amet. </p>
                 </div>
             </section>
         </div>
     </header>
-    <main>
+
+    <!-- MES COMPETENCES -->
+    <h3 id="mes-competences">Mes compétences</h3>
+    <section id="container-central">
+        <img src="assets/img/html-icon.png" alt="">
+        <img src="assets/img/css-icon.png" alt="">
+        <img src="assets/img/figma-icon.png" alt="">
+        <img src="assets/img/javascript-icon.png" alt="">
+        <img src="assets/img/react-icon.png" alt="">
+        <img src="assets/img/java-icon.png" alt="">
+    </section>
+    <!-- MES PROJETS -->
+    <h3 id="mes-projets">Mes projets</h3>
+
+    <section id="container-central" class="projets-container">
+
+        <div id="first-row">
+            <div id="col">
+                <img src="assets/img/projet-scoop-me-1.png" alt="image du projet scoop me a cookie">
+                <h4>Projet : Scoop Me A Cookie</h4>
+                <p>Projet personnel fait avant mon entrée en formation chez Descodeuses. J'ai décidé de me challenger et
+                    de
+                    reproduire la page d'accueil d'une enseigne de cookie que j'apprécie.</p>
+            </div>
+
+            <div id="col">
+                <img src="assets/img/projet-blog-cuisine-1.png" alt="image du projet blog de cuisine">
+                <h4>Projet : blog de cuisine</h4>
+                <p>Projet personnel réalisé lors de la formation.</p>
+            </div>
+        </div>
+
+        <div id="second-row">
+            <div id="col">
+                <img src="assets/img/projet-globe-1.png" alt="image du projet les globe-trotteuse">
+                <h4>Projet : Les Globe-Trotteuses</h4>
+                <p>Projet fait en groupe lors de la formation. C'est le deuxième projet fait en groupe. Projet dont je
+                    suis
+                    fière car il est aboutit et car il y avait une bonne cohésion de groupe.</p>
+            </div>
+
+            <div id="col">
+                <img src="assets/img/projet-doudou-1.png" alt="image du projet event doudou">
+                <h4>Projet : Event Doudou</h4>
+                <p>Projet fait en groupe lors de la formation. C'est le quatrième projet. J'ai aussi adoré travailler
+                    sur ce
+                    projet car l'entente était superbe et c'est aussi un projet achevé. </p>
+            </div>
+        </div>
+
+        <div id="third-row">
+            <div id="col">
+                <img src="assets/img/projet-tasty-1.png" alt="image du projet tasty">
+                <h4>Projet : Tasty</h4>
+                <p>Projet fait en groupe lors de la formation. C'est le cinquième projet. J'ai adoré réalisé ce projet
+                    car
+                    j'ai
+                    pu apprendre beaucoup de mes partenaires.</p>
+            </div>
+            <!-- <img src="" alt="image du projet retrotoon">
+            <h4>Projet fil rouge : RetroToon</h4>
+            <p>Projet fait en groupe lors de la formation. C'est une plateforme de streaming sur laquelle on peut visionner
+            les dessins-animés de notre enfance (avant les années 2010; période où l'on peut remarquer l'utilisation de
+            3D).</p> -->
+        </div>
+    </section>
+
+    <!-- CONTACT -->
+    <section id="contact-volant">
+        <div id="container-central">
+            <h3 id="contact">Contact</h3>
+            <div id="info-contact">
+                <a href="https://github.com/morgane-bth" target="_blank"><img src="assets/img/github-50.png"
+                        alt="icone github"></a>
+                <a href="mailto:morgane.bth10@gmail.com"><img src="assets/img/mail-50.png" alt=""></a>
+                <a href="https://www.linkedin.com/in/morgane-barth%C3%A9l%C3%A9my-027b451bb/" target="_blank"><img
+                        src="assets/img/linkedin-50.png" alt="icone linkedin"></a>
+            </div>
+        </div>
+    </section>
 
     </main>
     <footer>
-        <div></div>
+        <div id="container-central">
+            <p>2024 - fait avec le <img id="coeur-bleu" src="assets/img/coeur-v2.png" alt="image d'un coeur bleu"> par
+                Morgane Barthélémy</p>
+        </div>
     </footer>
+
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
